# winter-linux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  tool.sh
src/: config.cpp  config.h  main.cpp  winter.h
src/features/: chams.cpp  chams.h  esp.cpp  esp.h  glow.cpp  glow.h  movement.cpp  movement.h  world.cpp  world.h
src/hooks/: hooks.cpp  hooks.h
src/imgui/: LICENSE.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/imgui/GL/: gl3w.c  gl3w.h  glcorearb.h
src/menu/: font.h  menu.cpp  menu.h
src/sdk/: entities.h  game_data.cpp  game_data.h  interfaces.cpp  interfaces.h  netvars.cpp  netvars.h  signatures.cpp  signatures.h
src/sdk/classes/: client_class.h  key_values.h  material.h  models_info.h  texture.h  user_cmd.h  utl_vector.h
src/sdk/definitions/: angles.h  game.h  matrix.h  vector.h
src/sdk/interfaces/: base_client.h  cvar.h  debug_overlay.h  engine_client.h  entity_list.h  global_vars.h  hud_chat.h  item_schema.h  localize.h  material_system.h  model_info.h  model_render.h  render_view.h  static_prop_manager.h  studio_render.h  surface.h
src/utils/: address.h  bitflag.h  color.h  hash.h  logger.cpp  logger.h  math.cpp  math.h  memory.cpp  memory.h  pattern_scanning.cpp  pattern_scanning.h  render.cpp  render.h  stb.hh  strafer.cpp  strafer.h  string_helper.cpp  string_helper.h
